Fixed issue with glyphicons not showing up correctly.

--- a/web/styles/divelog.less
+++ b/web/styles/divelog.less
@@ -1,3 +1,5 @@
+@icon-font-path: "/public/fonts/";
+
 body {
 	padding-top: 50px;
 	background-image: url(/public/img/scuba_background.jpg);
